--- a/task_1_1_1/task_1_1_1.html
+++ b/task_1_1_1/task_1_1_1.html
@@ -98,9 +98,9 @@
     <input type="text" name="email" value="" placeholder="这是一个文本输入框">
     <p>邮箱地址请按要求格式输入</p>
     <label for="pwd">请输入密码</label>
-    <input type="text" name="pwd" value="" placeholder="这是一个文本输入框">
+    <input type="password" name="pwd" value="" placeholder="这是一个文本输入框">
     <label for="checkPwd">请重复输入密码</label>
-    <input type="text" name="checkPwd" value="" placeholder="这是一个文本输入框">
+    <input type="password" name="checkPwd" value="" placeholder="这是一个文本输入框">
     <p>密码请为6-16位英文数字</p><br>
     <label for="sex">性别</label>
     <input type="radio" name="sex" value="男">男
@@ -117,6 +117,6 @@
     <textarea name="introduct">这是一个多行输入框，请您输入你的文字</textarea>
     <input type="submit" name="name" value="确认提交">
   </form>
-  <p>版权所有©</p>
+  <footer>版权所有©</footer>
 </body>
 </html>
