--- a/task_1_1_1/task_1_1_1.html
+++ b/task_1_1_1/task_1_1_1.html
@@ -117,6 +117,6 @@
     <textarea name="introduct">这是一个多行输入框，请您输入你的文字</textarea>
     <input type="submit" name="name" value="确认提交">
   </form>
-  <footer>版权所有©</footer>
+  <footer>版权所有&copy;</footer>
 </body>
 </html>
