--- a/task_1_1_1/task_1_1_1.html
+++ b/task_1_1_1/task_1_1_1.html
@@ -17,17 +17,17 @@
   <p>文章作者 文章发表时间</p>
   <p>这是一段很长很长的这是一段很长很长的文字这是一段很长很长的文字这是一段很长很长的文字这是一段很长很长的文字<br>换行了<br>这是一段很长很长的文字
   这是一段很长很长的文字这是一段很长很长的文字这是一段很长很长的文字这是一段很长很长的文字这是一段很长很长的文字这是一段很长很长的文字这是一段很长很长的文字这是一段很长很长的文字这是一段很长很长的文字，换行了<br>
-  这是一段很长很长的文字这是一段很长很长的文字<a href="http://www.talkingdata.com">http://www.talkingdata.com</a>这是一段很长很长的文字这是一段很长很长的文字这是一段很长很长的文字</p>
+  这是一段很长很长的文字这是一段很长很长的文字<a target="_blank" href="http://www.talkingdata.com">http://www.talkingdata.com</a>这是一段很长很长的文字这是一段很长很长的文字这是一段很长很长的文字</p>
   <img src="leaf.jpg" alt="枫叶">
   <p>这是一段很长很长的这是一段很长很长的文字这是一段很长很长的文字这是一段很长很长的文字这是一段很长很长的文字<br>换行了<br>这是一段很长很长的文字
   这是一段很长很长的文字这是一段很长很长的文字这是一段很长很长的文字这是一段很长很长的文字这是一段很长很长的文字这是一段很长很长的文字这是一段很长很长的文字这是一段很长很长的文字这是一段很长很长的文字，换行了<br>
-  这是一段很长很长的文字这是一段很长很长的文字<a href="http://www.talkingdata.com">http://www.talkingdata.com</a>这是一段很长很长的文字这是一段很长很长的文字这是一段很长很长的文字</p>
+  这是一段很长很长的文字这是一段很长很长的文字<a target="_blank" href="http://www.talkingdata.com">http://www.talkingdata.com</a>这是一段很长很长的文字这是一段很长很长的文字这是一段很长很长的文字</p>
   <h2>另一篇文章的一级标题</h2>
   <h2>文章二级标题</h2>
   <p>文章作者 文章发表时间</p>
   <p>这是一段很长很长的这是一段很长很长的文字这是一段很长很长的文字这是一段很长很长的文字这是一段很长很长的文字<br>换行了<br>这是一段很长很长的文字
   这是一段很长很长的文字这是一段很长很长的文字这是一段很长很长的文字这是一段很长很长的文字这是一段很长很长的文字这是一段很长很长的文字这是一段很长很长的文字这是一段很长很长的文字这是一段很长很长的文字，换行了<br>
-  这是一段很长很长的文字这是一段很长很长的文字<a href="http://www.talkingdata.com">http://www.talkingdata.com</a>这是一段很长很长的文字这是一段很长很长的文字这是一段很长很长的文字</p>
+  这是一段很长很长的文字这是一段很长很长的文字<a target="_blank" href="http://www.talkingdata.com">http://www.talkingdata.com</a>这是一段很长很长的文字这是一段很长很长的文字这是一段很长很长的文字</p>
   <img src="leaf.jpg" alt="枫叶">
   <ul>
     <li>列表项目一</li>
