--- a/task_1_2_1/task_1_2_1.html
+++ b/task_1_2_1/task_1_2_1.html
@@ -1,139 +1,223 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <title>Task2</title>
-  <style media="screen">
-  *{
-    margin: 0px;
-    padding:0px;
-    font-family: 微软雅黑;
-  }
-  header {
-    width: 100%;
-    background: #333;
-  }
-  </style>
+    <meta charset="UTF-8">
+    <title>任务二：零基础HTML及CSS编码（一）</title>
+    <link rel="stylesheet" href="./css/task02.css"/>
 </head>
+
 <body>
-  <header>
-    <nav>
-      <div style="padding: 10px 0px 10px 40px;">
-        <img src="logo.png" alt="">
-        <ul style="float:right;display:block;padding: 10px 0px 10px 40px;font-size:12px">
-          <li style="float:left;margin-right:15px"><a style="color:#fff" href="#">导航链接一</a></li>
-          <li style="float:left;margin-right:15px"><a style="color:#fff" href="#">导航链接二</a></li>
-          <li style="float:left;margin-right:15px"><a style="color:#fff" href="#">导航链接三</a></li>
-          <li style="float:left;margin-right:15px"><a style="color:#fff" href="#">导航链接四</a></li>
+<header class="fixed">
+    <h1 class="fl">
+        网站一级标题
+        <img src="./images/logo.png" alt="百度"/>
+    </h1>
+    <nav class="fr">
+        <ul>
+            <li><a href="">导航链接一</a></li>
+            <li><a href="">导航链接二</a></li>
+            <li><a href="">导航链接三</a></li>
+            <li><a href="">导航链接四</a></li>
         </ul>
-      </div>
     </nav>
-  </header>
-  <h2>文章一级标题</h2>
-  <h2>文章二级标题</h2>
-  <p>文章作者 文章发表时间</p>
-  <p>这是一段很长很长的这是一段很长很长的文字这是一段很长很长的文字这是一段很长很长的文字这是一段很长很长的文字<br>换行了<br>这是一段很长很长的文字
-  这是一段很长很长的文字这是一段很长很长的文字这是一段很长很长的文字这是一段很长很长的文字这是一段很长很长的文字这是一段很长很长的文字这是一段很长很长的文字这是一段很长很长的文字这是一段很长很长的文字，换行了<br>
-  这是一段很长很长的文字这是一段很长很长的文字<a href="http://www.talkingdata.com">http://www.talkingdata.com</a>这是一段很长很长的文字这是一段很长很长的文字这是一段很长很长的文字</p>
-  <img src="leaf.jpg" alt="枫叶">
-  <p>这是一段很长很长的这是一段很长很长的文字这是一段很长很长的文字这是一段很长很长的文字这是一段很长很长的文字<br>换行了<br>这是一段很长很长的文字
-  这是一段很长很长的文字这是一段很长很长的文字这是一段很长很长的文字这是一段很长很长的文字这是一段很长很长的文字这是一段很长很长的文字这是一段很长很长的文字这是一段很长很长的文字这是一段很长很长的文字，换行了<br>
-  这是一段很长很长的文字这是一段很长很长的文字<a href="http://www.talkingdata.com">http://www.talkingdata.com</a>这是一段很长很长的文字这是一段很长很长的文字这是一段很长很长的文字</p>
-  <h2>另一篇文章的一级标题</h2>
-  <h2>文章二级标题</h2>
-  <p>文章作者 文章发表时间</p>
-  <p>这是一段很长很长的这是一段很长很长的文字这是一段很长很长的文字这是一段很长很长的文字这是一段很长很长的文字<br>换行了<br>这是一段很长很长的文字
-  这是一段很长很长的文字这是一段很长很长的文字这是一段很长很长的文字这是一段很长很长的文字这是一段很长很长的文字这是一段很长很长的文字这是一段很长很长的文字这是一段很长很长的文字这是一段很长很长的文字，换行了<br>
-  这是一段很长很长的文字这是一段很长很长的文字<a href="http://www.talkingdata.com">http://www.talkingdata.com</a>这是一段很长很长的文字这是一段很长很长的文字这是一段很长很长的文字</p>
-  <img src="leaf.jpg" alt="枫叶">
-  <ul>
-    <li>列表项目一</li>
-    <li>列表项目二</li>
-    <li>列表项目三</li>
-  </ul>
-  <h2>图片</h2>
-  <dl>
-    <dd>好看的图片</dd>
-    <dd><img src="leaf.jpg" alt="枫叶"></dd>
-  </dl>
-  <dl>
-    <dd>好看的图片</dd>
-    <dd><img src="leaf.jpg" alt="枫叶"></dd>
-  </dl>
-  <dl>
-    <dd>好看的图片</dd>
-    <dd><img src="leaf.jpg" alt="枫叶"></dd>
-  </dl>
-  <dl>
-    <dd>好看的图片</dd>
-    <dd><img src="leaf.jpg" alt="枫叶"></dd>
-  </dl>
-  <h2>最后一篇文章的一级标题</h2>
-  <h2>文章二级标题</h2>
-  <p>文章作者 文章发表时间</p>
-  <ol>
-    <li>排名1</li>
-    <li>排名2</li>
-    <li>排名3</li>
-  </ol>
-  <p>下面是一个表格，给你的表格加一个border=1让你的表格看起来像个表格</p>
-  <table border="1">
-    <tr>
-      <td>表头</td>
-      <td>表头</td>
-      <td>表头</td>
-    </tr>
-    <tr>
-      <td>表内容单元格</td>
-      <td>表内容单元格</td>
-      <td><a href="#">操作</a></td>
-    </tr>
-    <tr>
-      <td>表内容单元格</td>
-      <td>表内容单元格</td>
-      <td><a href="#">操作</a></td>
-    </tr>
-    <tr>
-      <td>表内容单元格</td>
-      <td>表内容单元格</td>
-      <td><a href="#">操作</a></td>
-    </tr>
-    <tr>
-      <td>表内容单元格</td>
-      <td>表内容单元格</td>
-      <td><a href="#">操作</a></td>
-    </tr>
-    <tr>
-      <td>总计</td>
-      <td colspan="2">1000</td>
-    </tr>
-  </table>
-  <h2>这里以后是个侧栏，这是侧栏的标题</h2>
-  <h2>侧栏注册窗口标题</h2>
-  <form action="">
-    <label for="email">请输入邮箱地址</label>
-    <input type="text" name="email" value="" placeholder="这是一个文本输入框">
-    <p>邮箱地址请按要求格式输入</p>
-    <label for="pwd">请输入密码</label>
-    <input type="password" name="pwd" value="" placeholder="这是一个文本输入框">
-    <label for="checkPwd">请重复输入密码</label>
-    <input type="password" name="checkPwd" value="" placeholder="这是一个文本输入框">
-    <p>密码请为6-16位英文数字</p><br>
-    <label for="sex">性别</label>
-    <input type="radio" name="sex" value="男">男
-    <input type="radio" name="sex" value="女">女
-    <label for="city">城市：</label>
-    <select class="" name="city">
-      <option value="北京">北京</option>
-    </select>
-    <label for="interest">爱好：</label>
-    <input type="checkbox" name="interest" value="篮球">篮球
-    <input type="checkbox" name="interest" value="足球">足球
-    <input type="checkbox" name="interest" value="乒乓球">乒乓球
-    <label for="introduct"></label>
-    <textarea name="introduct">这是一个多行输入框，请您输入你的文字</textarea>
-    <input type="submit" name="name" value="确认提交">
-  </form>
-  <footer>版权所有&copy;</footer>
+</header>
+<main>
+    <article>
+        <h2>文章一级标题</h2>
+        <h2 class="subtitle">文章二级标题</h2>
+        <div class="author_time"><span>文章作者</span> <span>文章发表时间</span></div>
+        <p>这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，换行了</p>
+        <p>这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，换行了</p>
+        <p>这是一个很长很长的段落，这是一个很长很长的段落，<a href="http://ife.baidu.com" title="百度前端技术学院">这里有一个链接链接到http://ife.baidu.com</a>这是一个很长很长的段落，这是一个很长很长的段落，<b>这里有个粗体字</b>这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落。</p>
+        <img src="http://old.8080.net/pics/200912/12251053054_tn.jpg" alt="机械键盘">
+        <p>这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，换行了</p>
+        <p>这是一个很长很长的段落，这是一个很长很长的段落，<a href="http://ife.baidu.com" title="百度前端技术学院">这里有一个链接链接到http://ife.baidu.com</a>这是一个很长很长的段落，这是一个很长很长的段落，<b>这里有个粗体字</b>这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落。</p>
+    </article>
+    <article>
+        <h2>另一篇文章一级标题</h2>
+        <h2 class="subtitle">文章二级标题</h2>
+        <div class="author_time"><span>文章作者</span> <span>文章发表时间</span></div>
+        <p>这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，换行了</p>
+        <p>这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，换行了</p>
+        <p>这是一个很长很长的段落，这是一个很长很长的段落，<a href="http://ife.baidu.com" title="百度前端技术学院">这里有一个链接链接到http://ife.baidu.com</a>这是一个很长很长的段落，这是一个很长很长的段落，<b>这里有个粗体字</b>这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落。</p>
+        <img src="http://old.8080.net/pics/200912/12251053054_tn.jpg" alt="机械键盘">
+        <ul class="nostyle">
+            <li>列表项目一</li>
+            <li>列表项目二</li>
+            <li>列表项目三</li>
+        </ul>
+    </article>
+    <section>
+        <h2>图片</h2>
+        <div class="pictures">
+            <div class="pictures_item">
+                <a href="" title="好看的图片">
+                    <div>好看的图片</div>
+                    <img src="http://old.8080.net/pics/200912/12251053054_tn.jpg" alt="好看的图片">
+                </a>
+            </div>
+            <div class="pictures_item">
+                <a href="" title="好看的图片">
+                    <div>好看的图片</div>
+                    <img src="http://old.8080.net/pics/200912/12251053054_tn.jpg" alt="好看的图片">
+                </a>
+            </div>
+            <div class="pictures_item">
+                <a href="" title="好看的图片">
+                    <div>好看的图片</div>
+                    <img src="http://old.8080.net/pics/200912/12251053054_tn.jpg" alt="好看的图片">
+                </a>
+            </div>
+            <div class="pictures_item">
+                <a href="" title="好看的图片">
+                    <div>好看的图片</div>
+                    <img src="http://old.8080.net/pics/200912/12251053054_tn.jpg" alt="好看的图片">
+                </a>
+            </div>
+            <div class="pictures_item">
+                <a href="" title="好看的图片">
+                    <div>好看的图片</div>
+                    <img src="http://old.8080.net/pics/200912/12251053054_tn.jpg" alt="好看的图片">
+                </a>
+            </div>
+            <div class="pictures_item">
+                <a href="" title="好看的图片">
+                    <div>好看的图片</div>
+                    <img src="http://old.8080.net/pics/200912/12251053054_tn.jpg" alt="好看的图片">
+                </a>
+            </div>
+            <div class="pictures_item">
+                <a href="" title="好看的图片">
+                    <div>好看的图片</div>
+                    <img src="http://old.8080.net/pics/200912/12251053054_tn.jpg" alt="好看的图片">
+                </a>
+            </div>
+            <div class="pictures_item">
+                <a href="" title="好看的图片">
+                    <div>好看的图片</div>
+                    <img src="http://old.8080.net/pics/200912/12251053054_tn.jpg" alt="好看的图片">
+                </a>
+            </div>
+            <div class="pictures_item">
+                <a href="" title="好看的图片">
+                    <div>好看的图片</div>
+                    <img src="http://old.8080.net/pics/200912/12251053054_tn.jpg" alt="好看的图片">
+                </a>
+            </div>
+            <div class="pictures_item">
+                <a href="" title="好看的图片">
+                    <div>好看的图片</div>
+                    <img src="http://old.8080.net/pics/200912/12251053054_tn.jpg" alt="好看的图片">
+                </a>
+            </div>
+        </div>
+    </section>
+    <article>
+        <h2>最后一篇文章一级标题</h2>
+        <h2 class="subtitle">文章二级标题</h2>
+        <div class="author_time"><span>文章作者</span> <span>文章发表时间</span></div>
+        <ol>
+            <li>排名1</li>
+            <li>排名2</li>
+            <li>排名3</li>
+        </ol>
+        <div>下面是一个表格，给表格加了一个border="1"好让你看出是一个表格</div>
+        <table cellspacing="1">
+            <tr>
+                <th>表头</th>
+                <th>表头</th>
+                <th>表头</th>
+            </tr>
+            <tr>
+                <td>表内容单元格</td>
+                <td>表内容单元格</td>
+                <td><a href="">操作</a></td>
+            </tr>
+            <tr>
+                <td>表内容单元格</td>
+                <td>表内容单元格</td>
+                <td><a href="">操作</a></td>
+            </tr>
+            <tr>
+                <td>表内容单元格</td>
+                <td>表内容单元格</td>
+                <td><a href="">操作</a></td>
+            </tr>
+            <tr>
+                <td>表内容单元格</td>
+                <td>表内容单元格</td>
+                <td><a href="">操作</a></td>
+            </tr>
+            <tr class="bg-inherit">
+                <td>总计</td>
+                <td colspan="2">1000</td>
+            </tr>
+        </table>
+    </article>
+</main>
+<aside>
+    <h2>这里以后是一个侧栏，这是侧栏的标题</h2>
+    <form action="" method="post">
+        <table>
+            <tr>
+                <td><label for="email">请输入邮箱地址</label></td>
+                <td><input type="text" value="这是一个文本输入框" name="email" id="email"></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td class="input-helper">邮箱地址请按要求格式输入</td>
+            </tr>
+            <tr>
+                <td><label for="password">请输入密码</label></td>
+                <td><input type="password" id="password"></td>
+            </tr>
+            <tr>
+                <td><label for="repassword">请重复输入密码</label></td>
+                <td><input type="password" id="repassword"></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td class="input-helper">密码为6-16位英文数字</td>
+            </tr>
+            <tr>
+                <td>性别</td>
+                <td>
+                    <input type="radio" checked="checked" name="sex" value="male" id="male">
+                    <label for="male">男</label>
+                    <input type="radio" name="sex" value="female" id="female">
+                    <label for="female">女</label>
+                </td>
+            </tr>
+            <tr>
+                <td><label for="city">城市</label></td>
+                <td>
+                    <select name="city" id="city">
+                        <option value="北京">北京</option>
+                        <option value="上海">上海</option>
+                        <option value="广州">广州</option>
+                    </select>
+                </td>
+            </tr>
+            <tr>
+                <td>爱好</td>
+                <td><input type="checkbox" name="hobby" value="运动" id="exercise">
+                    <label for="exercise">运动</label>
+                    <input type="checkbox" name="hobby" value="运动" id="art">
+                    <label for="art">艺术</label>
+                    <input type="checkbox" name="hobby" value="运动" id="science">
+                    <label for="science">科学</label>
+                </td>
+            </tr>
+            <tr>
+                <td class="text-top"><label for="introduce">个人描述</label></td>
+                <td><textarea name="introduce" id="introduce">这是一个多行输入框，输入您的个人描述</textarea></td>
+            </tr>
+        </table>
+        <input type="submit" class="btn-submit" value="确认提交">
+    </form>
+</aside>
+<footer>版权所有©</footer>
 </body>
+
 </html>
