--- a/task_1_3/task_3_yft.html
+++ b/task_1_3/task_3_yft.html
@@ -17,7 +17,6 @@
 
 		#wrap { padding: 20px 142px 20px 222px; margin: 20px; background: #eee; }
 		#wrap .column { position: relative; float: left; }
-
 		#center { width: 100%; }
 		#left { width: 202px; right: 202px; margin-left: -100%; }
 		#right { width: 122px; margin-right: -122px; }
@@ -25,7 +24,6 @@
 		*html #left { left: 150px; }
 
 		#wrap, header, main, aside, header img, aside img { border: 1px solid #999; }
-
 		header, main, aside { background: #fff; padding: 20px; }
 		main { margin: 0 20px; font-size: 16px; }
 		main h2 { font-size: 16px; }
@@ -41,25 +39,67 @@
 		<div id="center" class="column">
 			<main>
 				<h2>关于我们男神队</h2>
-				<p>这是介绍这是介绍这是介绍这是介绍这是介绍这是介绍这是介绍这是介绍这是介绍这是介绍这是介绍这是介绍这是介绍这是介绍这是介绍这是介绍这是介绍这是介绍这是介绍这是介绍这是介绍这是介绍这是介绍这是介绍这是介绍这是介绍这是介绍这是介绍这是介绍这是介绍这是介绍这是介绍这是介绍</p>
-				<h2>关于我们男神队</h2>
-				<p>这是介绍这是介绍这是介绍这是介绍这是介绍这是介绍这是介绍这是介绍这是介绍这是介绍这是介绍这是介绍这是介绍这是介绍这是介绍这是介绍这是介绍这是介绍这是介绍这是介绍这是介绍这是介绍这是介绍这是介绍这是介绍这是介绍这是介绍这是介绍这是介绍这是介绍这是介绍这是介绍这是介绍</p>
-				<h2>关于我们男神队</h2>
-				<p>这是介绍这是介绍这是介绍这是介绍这是介绍这是介绍这是介绍这是介绍这是介绍这是介绍这是介绍这是介绍这是介绍这是介绍这是介绍这是介绍这是介绍这是介绍这是介绍这是介绍这是介绍这是介绍这是介绍这是介绍这是介绍这是介绍这是介绍这是介绍这是介绍这是介绍这是介绍这是介绍这是介绍</p>
+				<pre>
+速度七十迈
+心情是自由自在
+希望终点是爱琴海
+全力奔跑 梦在彼岸
+我们想漫游世界
+看奇迹就在眼前
+等待夕阳染红了天
+肩并着肩 许下心愿
+随风奔跑自由是方向
+追逐雷和闪电的力量
+把浩瀚的海洋装进我胸膛
+即使再小的帆也能远航
+随风飞翔有梦做翅膀
+敢爱敢做勇敢闯一闯
+哪怕遇见再大的风险 再大的浪
+也会有默契的目光
+速度七十迈
+心情是自由自在
+希望终点是爱琴海
+全力奔跑 梦在彼岸
+我们想漫游世界
+看奇迹就在眼前
+等待夕阳染红了天
+肩并着肩 许下心愿
+随风奔跑自由是方向
+追逐雷和闪电的力量
+把浩瀚的海洋装进我胸膛
+即使再小的帆也能远航
+随风飞翔有梦做翅膀
+敢爱敢做勇敢闯一闯
+哪怕遇见再大的风险 再大的浪
+也会有默契的目光
+随风奔跑自由是方向
+追逐雷和闪电的力量
+把浩瀚的海洋装进我胸膛
+即使再小的帆也能远航
+随风飞翔有梦做翅膀
+敢爱敢做勇敢闯一闯
+哪怕遇见再大的风险 再大的浪
+也会有默契的目光
+我们想漫游世界
+看奇迹就在眼前
+等待夕阳染红了天
+肩并着肩 许下心愿
+				</pre>
 			</main>
 		</div>
 		<div id="left" class="column">
 			<header class="clearfix">
-				<img src="#" alt="男神队" class="fl">
+				<img src="http://g.hiphotos.baidu.com/zhidao/pic/item/aec379310a55b3196d1bc30542a98226cefc17db.jpg" alt="男神队" class="fl">
 				<h1 class="fr">男神队</h1>
 			</header>
 		</div>
 		<div id="right" class="column">
 			<aside>
-				<img src="#" alt="个人logo">
-				<img src="#" alt="个人logo">
-				<img src="#" alt="个人logo">
-				<img src="#" alt="个人logo">
+				<img src="http://tb.himg.baidu.com/sys/portrait/item/175ce78baee5ad906c697669619a2f" alt="刘天骄">
+				<img src="http://tb.himg.baidu.com/sys/portrait/item/fd8f31303539383032313235ec06" alt="袁芳婷">
+				<img src="http://tb.himg.baidu.com/sys/portrait/item/f140e4b880e7949fe79da1e59ca8e6a2a6e4b8ad4c3a" alt="李美行">
+				<img src="http://tb.himg.baidu.com/sys/portrait/item/7cbd6d6d6c6c6363370327" alt="张自杨">
+				<img src="http://tb.himg.baidu.com/sys/portrait/item/091f77696e67e7bf85e8868031313026" alt="王嘉丰">
 			</aside>
 		</div>
 	</div>
