--- a/task_1_3/task_3_yft.html
+++ b/task_1_3/task_3_yft.html
@@ -15,7 +15,7 @@
 		/*** For IE 6/7 only ***/
 		.clearfix { *zoom: 1; }
 
-		#wrap { padding: 20px 142px 20px 222px; margin: 20px; background: #eee; }
+		#wrap { min-width: 450px; padding: 20px 142px 20px 222px; margin: 20px; background: #eee; }
 		#wrap .column { position: relative; float: left; }
 		#center { width: 100%; }
 		#left { width: 202px; right: 202px; margin-left: -100%; }
