--- a/task_1_6/yft/index.html
+++ b/task_1_6/yft/index.html
@@ -7,11 +7,16 @@
 </head>
 <body>
 <div class="wrap">
+	<!-- =================================== header =================================== -->
 	<header class="flex-row">
 		<h1><a href="http://ife.baidu.com">ife.baidu.com</a></h1>
 		<time>2016.03</time>
 	</header>
+	<!-- =================================== header end =================================== -->
+	<!-- =================================== content =================================== -->
+		<!-- ================= top ================= -->
 	<div class="top flex-row">
+		<!-- top_left -->
 		<article>
 			<div class="banner">
 				<div class="mask-green"></div>
@@ -40,6 +45,7 @@
 				</section>
 			</div>
 		</article>
+		<!-- top_right -->
 		<section class="bignews">
 			<h2><p>About</p><p>Technologe</p></h2>
 			<p class="subtitle">About technologe about technologe about technologe</p>
@@ -53,7 +59,9 @@
 			</div>
 		</section>
 	</div>
+		<!-- ================= bottom ================= -->
 	<div class="bottom flex-row">
+		<!-- bottom_left -->
 		<article>
 			<h2>
 				<span class="color-yellow">THE</span> TECHNOLOGE OF FRONT
@@ -67,6 +75,7 @@
 			<p>前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端</p>
 			<p>前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端</p>
 		</article>
+		<!-- bottom_right -->
 		<div class="flex-col">
 			<section class="slider">
 				<a href="#"><img src="./images/slider.png" alt=""></a>
@@ -96,9 +105,12 @@
 			</section>
 		</div>
 	</div>
+	<!-- =================================== content end =================================== -->
+	<!-- =================================== footer =================================== -->
 	<footer class="fixed">
 		<a href="http://ife.baidu.com" class="fr">ife.baidu.com</a>
 	</footer>
+	<!-- =================================== footer end =================================== -->
 </div>
 </body>
 </html>
